--- a/estilos/style.css
+++ b/estilos/style.css
@@ -6,8 +6,6 @@
     font-family: Arial, Helvetica, sans-serif;
 }
 
-
-
 body {
     background: url('../imagens/fundo.jpg') bottom left/cover no-repeat fixed;
 }
@@ -28,6 +26,32 @@ main{
     background: url('../imagens/frame-iphone.png') no-repeat fixed;
 }
 
-#redes-sociais{
+#tela{
+    position: relative;
+    top: 80px;
+    left: 22px;
+    width: 267px;
+    height: 472px;
+}
 
+#redes-sociais{
+    text-align: right;
+}
+
+#redes-sociais img{
+    width: 50px;
+    margin: 10px;
+    border-radius: 50%;
+    box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.32);
+    box-sizing: border-box;
+}
+
+#redes-sociais img:hover{
+    transform: translate(-4px, -3px);
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.308);
+    transition-duration: 0.6s;
+}
+
+#redes-sociais img:active {
+    transform: scale(95%);
 }
